@@ -14,7 +14,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<div align="right"><h5>Last update 19-May-2004</h5></div>
+<div align="right"><h5>Last update 24-Jun-2004</h5></div>
 <div align="center"><H1>MBSE BBS Setup - Global Setup</H1></div>
 
 In this setup you can edit all global settings for MBSE BBS. All sections will
@@ -318,6 +318,7 @@ www.linuxdoc.org</A>, it's all there.
 
 <pre>
 <strong>POP3 node         </strong>The POP3 node to use, should be localhost
+<strong>POP3 user@domain  </strong>Use user@domain to login in the POP3 server
 <strong>SMTP node         </strong>The SMTP node to use, should be localhost
 <strong>NNTP node         </strong>The NNTP node to use, should be localhost
 <strong>NNTP m.r.         </strong>If the NNTP server needs the Mode Reader command
