@@ -14,6 +14,12 @@ v0.61.1		20-Jun-2004.
 	mbnntp:
 		If compiled in full newsmode, this program acts like a dummy.
 
+	mbsebbs:
+		Added user@domain login for pop3 mailboxes.
+
+	mbsetup:
+		Added user@domain login for pop3 servers in screen 1.12.
+
 
 v0.61.0		06-Jun-2004 - 20-Jun-2004
 
